# miniprfoject

./: README.md
oop_project/: CMakeLists.txt  date.cpp  date.h  human.cpp  human.h  main.cpp  oop_project.h  publication.cpp  publication.h  research.cpp  research.h  student.cpp  student.h
